--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Express</title>
+    <title>Formulario de Ingreso de Productos</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div>
-      <h1>Crear Productos</h1>
-      <form action="/api/productos" method="post">
-        <input type="text" name="title" placeholder="Nombre" />
-        <input type="number" name="price" placeholder="Precio" />
-        <input type="text" name="thumbnail" placeholder="URL" />
-        <input type="submit" value="Agregar productos" />
-      </form>
+    <div class="container mt-3">
+      <div class="jumbotron">
+        <h1>Ingrese Producto</h1>
+        <br />
+
+        <form action="/productos/guardar" method="POST" autocomplete="off">
+          <!-- Campo nombre del producto -->
+          <div class="form-group">
+            <label for="nombre">Nombre</label>
+            <input
+              id="nombre"
+              class="form-control"
+              type="text"
+              name="title"
+              required
+            />
+          </div>
+
+          <!-- Campo precio del producto -->
+          <div class="form-group">
+            <label for="precio">Precio</label>
+            <input
+              id="precio"
+              class="form-control"
+              type="number"
+              step="0.01"
+              name="price"
+              required
+            />
+          </div>
+
+          <!-- Campo url de la foto del producto -->
+          <div class="form-group">
+            <label for="foto">Foto URL</label>
+            <input id="foto" class="form-control" type="url" name="thumbnail" />
+          </div>
+
+          <!-- Botón de envío -->
+          <button class="btn btn-success mt-3">Enviar</button>
+        </form>
+      </div>
     </div>
   </body>
 </html>
