--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,11 @@
           <!-- Botón de envío -->
           <button class="btn btn-success mt-3">Enviar</button>
         </form>
+        <div class="container pt-5">
+          <div class="col-md-12 text-center">
+            <a href="/productos" class="btn btn-primary">Ver Productos</a>
+          </div>
+        </div>
       </div>
     </div>
   </body>
